
History
-------

0.8.1 (10/29/2010)
~~~~~~~~~~~~~~~~~~

- Add 'slugify' support
- Doc fixes
- Add support to optionally publish content after creation
- Add support for generic files

0.8 (10/27/2010)
~~~~~~~~~~~~~~~~

- Support the importing of content to folders within the Plone site object

0.7 (10/25/2010)
~~~~~~~~~~~~~~~~

- Documentation fixes

0.6 (10/25/2010)
~~~~~~~~~~~~~~~~

- Support customization via recipe parameters and command line arguments

0.5 (10/22/2010)
~~~~~~~~~~~~~~~~

- Revert 'Add Plone to install_requires'

0.4 (10/22/2010)
~~~~~~~~~~~~~~~~

- Add 'Plone' to install_requires

0.3 (10/22/2010)
~~~~~~~~~~~~~~~~

- Another setuptools fix

0.2 (10/22/2010)
~~~~~~~~~~~~~~~~

- Setuptools fix

0.1 (10/21/2010)
~~~~~~~~~~~~~~~~

- Initial release